# unibz_ds_alg

./: .gitignore  CMakeLists.txt  squaresort.py  tetranacci.py
ADT/: CMakeLists.txt  adttest.c  binarytree.c  binarytree.h  linkedlist.c  linkedlist.h
arrayshift/: main.c
benchmark/: CMakeLists.txt  benchmark.c  benchmark.h
collatz/: main.c
evensort/: main.c
graph/: Client.h  DagClient.c  Graph.c  Graph.h  GraphClient.c  List.c  List.h  Queue.c  Queue.h  Stack.c  Stack.h  main.c
intarr/: main.c
lab6/: HeapSort.c  HeapSort.h  InsertionSort.c  InsertionSort.h  MergeSort.c  MergeSort.h  QuickSort.c  QuickSort.h  SelectionSort.c  SelectionSort.h  Utils.c  Utils.h  main.c
lab7_linked_list/: main.c
lab8_priority_queue/: main.c
merge_sort/: main.c
sum_of_products/: main.c
utils/: array.h
